--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "strapi": "strapi"
   },
   "dependencies": {
-    "@strapi/plugin-cloud": "5.8.1",
-    "@strapi/plugin-users-permissions": "5.8.1",
-    "@strapi/provider-upload-aws-s3": "^5.9.0",
-    "@strapi/strapi": "5.8.1",
+    "@strapi/plugin-cloud": "^5.35.0",
+    "@strapi/plugin-users-permissions": "^5.35.0",
+    "@strapi/provider-upload-aws-s3": "^5.35.0",
+    "@strapi/strapi": "^5.35.0",
     "better-sqlite3": "11.3.0",
     "pg": "^8.13.1",
     "react": "^18.0.0",
